--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
+          <li>hai</li>
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
