--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/rasha/27754 RASHA .jpg" class="img-fluid" alt="">
+            <img src="assets/img/rasha/portrait-documents-passport-photo-young-female-natural-look_100800-10816.avif" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Graphic Designer &amp; Web Developer.</h2>
@@ -121,7 +121,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rashasadique21@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>example21@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
