--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>Noorul Dua,Madakkara,kannur,670301</p>
+                  <p>Noorul Dua,jasintha,kannur</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -126,7 +126,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Us</h3>
-                  <p>rashasadique21@gmail.com</p>
+                  <p>example21@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31236.39582305075!2d75.34957854491476!3d11.866776604777714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba422b9b2aca753%3A0x380605a11ce24f6c!2sKannur%2C%20Kerala!5e0!3m2!1sen!2sin!4v1747736519882!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
